--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -86,6 +86,19 @@ a {
 			position: relative;
 			margin-top: -5em;
 			margin-bottom: 0;
+
+			// screenshot top corners are rounded
+			border-radius: 3px 3px 0 0;
+
+			@media screen and (min-width: 42em) and (max-width: 64em) {
+				border-radius: 2px 2px 0 0;
+				margin-top: -4em;
+			}
+
+			@media screen and (max-width: 42em) {
+				border-radius: 1px 1px 0 0;
+				margin-top: -3em;
+			}
 		}
 	}
 }
